# PHPA_Star

./: .gitignore  CMakeLists.txt  README.md
include/: cli.hpp  clustering.hpp  phpa_types.hpp
reads/: dynamic_recalculation.md  internes_datenformat.md  precomputing.md  readme.md
src/: cli.cpp  main.cpp
tests/: test_addition.cpp  test_cli.cpp  test_clustering.cpp  test_main.cpp  test_position.cpp
web/: index.html
web/body/: index.html  main.css
web/css/: dropdown.css  main.css  sidepannel.css  variables.css
web/js/: components.js  themes.js
web/js/components/: DropDown.js  SideElements.js
